force-app/main/default/objects/Logistics__c/Logistics__c.object-meta.xml
<CustomObject>
    <label>Logistics</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Logistics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>