force-app/main/default/objects/Logistics__c/fields/Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Time__c</fullName>
    <label>Delivery Date and Time</label>
    <type>DateTime</type>
</CustomField>