force-app/main/default/objects/Logistics__c/fields/Equipment_Details__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Details__c</fullName>
    <label>Equipment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>