force-app/main/default/objects/Logistics__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Location</label>
    <referenceTo>Venues__c</referenceTo>
    <relationshipLabel>Logistics</relationshipLabel>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>