force-app/main/default/objects/Logistics__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Name</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Logistics</relationshipLabel>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>