force-app/main/default/objects/Logistics__c/fields/Parking_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Parking_Arrangements__c</fullName>
    <label>Parking Arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>