force-app/main/default/objects/Logistics__c/fields/Transportation_Provider__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportation Provider</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Logistics</relationshipLabel>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>