force-app/main/default/objects/Logistics__c/fields/Transportation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Type__c</fullName>
    <label>Transportation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Private Transport</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>