force-app/main/default/objects/Logistics__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <formula>Transportation_Provider__r.Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Contact</label>
    <type>Text</type>
</CustomField>