force-app/main/default/objects/Logistics__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <formula>Transportation_Provider__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Email</label>
    <type>Text</type>
</CustomField>